@@ -5,8 +5,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.validation.ConstraintViolation;
 import javax.validation.Validation;
@@ -29,9 +31,11 @@ import de.tum.in.www1.artemis.domain.Exercise;
 import de.tum.in.www1.artemis.domain.Lecture;
 import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.enumeration.DisplayPriority;
+import de.tum.in.www1.artemis.domain.enumeration.SortingOrder;
 import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.metis.CourseWideContext;
 import de.tum.in.www1.artemis.domain.metis.Post;
+import de.tum.in.www1.artemis.domain.metis.PostSortCriterion;
 import de.tum.in.www1.artemis.domain.metis.UserRole;
 import de.tum.in.www1.artemis.domain.plagiarism.PlagiarismCase;
 import de.tum.in.www1.artemis.repository.metis.PostRepository;
@@ -93,7 +97,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
 
         existingPosts = existingPostsAndConversationPosts.stream().filter(post -> post.getConversation() == null).toList();
 
-        existingCoursePosts = existingPosts.stream().filter(coursePost -> (coursePost.getPlagiarismCase() == null)).toList();
+        existingCoursePosts = existingPosts.stream().filter(coursePost -> (coursePost.getPlagiarismCase() == null)).collect(Collectors.toList());
 
         // filter existing posts with exercise context
         existingExercisePosts = existingPosts.stream().filter(coursePost -> (coursePost.getExercise() != null)).toList();
@@ -708,53 +712,41 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     void testGetPostsForCourse_OrderByCreationDateDESC() throws Exception {
-        // TODO: Disabled until next refactoring due to incompatibility of DISTINCT & ORDER BY in H2 DB during testing
-        // TODO: https://github.com/h2database/h2database/issues/408
+        var params = new LinkedMultiValueMap<String, String>();
 
-        // PostSortCriterion sortCriterion = PostSortCriterion.CREATION_DATE;
-        // SortingOrder sortingOrder = SortingOrder.DESCENDING;
-        //
-        // var params = new LinkedMultiValueMap<String, String>();
-        //
-        // // ordering only available in course discussions page, where paging is enabled
-        // params.add("pagingEnabled", "true");
-        // params.add("page", "0");
-        // params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
-        //
-        // params.add("postSortCriterion", sortCriterion.toString());
-        // params.add("sortingOrder", sortingOrder.toString());
-        //
-        // List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
-        // database.assertSensitiveInformationHidden(returnedPosts);
-        // existingPosts.sort(Comparator.comparing(Post::getCreationDate).reversed());
-        //
-        // assertThat(returnedPosts).isEqualTo(existingPosts);
+        // ordering only available in course discussions page, where paging is enabled
+        params.add("pagingEnabled", "true");
+        params.add("page", "0");
+        params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
+
+        params.add("postSortCriterion", PostSortCriterion.CREATION_DATE.toString());
+        params.add("sortingOrder", SortingOrder.DESCENDING.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
+        existingCoursePosts.sort(Comparator.comparing(Post::getCreationDate).reversed());
+
+        assertThat(returnedPosts).isEqualTo(existingCoursePosts);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     void testGetPostsForCourse_OrderByCreationDateASC() throws Exception {
-        // TODO: Disabled until next refactoring due to incompatibility of DISTINCT & ORDER BY in H2 DB during testing
-        // TODO: https://github.com/h2database/h2database/issues/408
+        var params = new LinkedMultiValueMap<String, String>();
 
-        // PostSortCriterion sortCriterion = PostSortCriterion.CREATION_DATE;
-        // SortingOrder sortingOrder = SortingOrder.ASCENDING;
-        //
-        // var params = new LinkedMultiValueMap<String, String>();
-        //
-        // // ordering only available in course discussions page, where paging is enabled
-        // params.add("pagingEnabled", "true");
-        // params.add("page", "0");
-        // params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
-        //
-        // params.add("postSortCriterion", sortCriterion.toString());
-        // params.add("sortingOrder", sortingOrder.toString());
-        //
-        // List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
-        // database.assertSensitiveInformationHidden(returnedPosts);
-        // existingPosts.sort(Comparator.comparing(Post::getCreationDate));
-        //
-        // assertThat(returnedPosts).isEqualTo(existingPosts);
+        // ordering only available in course discussions page, where paging is enabled
+        params.add("pagingEnabled", "true");
+        params.add("page", "0");
+        params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
+
+        params.add("postSortCriterion", PostSortCriterion.CREATION_DATE.toString());
+        params.add("sortingOrder", SortingOrder.ASCENDING.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
+        existingCoursePosts.sort(Comparator.comparing(Post::getCreationDate));
+
+        assertThat(returnedPosts).isEqualTo(existingCoursePosts);
     }
 
     @Test
